tests/errors/preprocessor/comm_not_ended.c
int main()
{
	/*printf("qwerty\n");
	return 0;
}
